--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="cursor" id="cursor">
-    <!-- Optional- SVG cursor can add here -->
-  </div>
+  <div class="cursor" id="cursor"></div>
+  <!-- Optional- SVG cursor can add here -->
+  <script
+  crossOrigin="anonymous"
+  src="//unpkg.com/react-scan/dist/auto.global.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
